<resources>
    <string name="app_name">School v.1.0</string>
    <string name="strN1">Grade 1</string>
    <string name="strN2">Grade 2</string>
    <string name="strCalc">Calculate</string>
    <string name="strM">Average</string>
    <string name="strSit">Status</string>
    <string name="strZero">0</string>
    <string name="strSitAp">Approved</string>
    <string name="strSitRc">Retake Text</string>
    <string name="strSitRp">Disapproved</string>
    <string name="strMsgAp">Congratulations!</string>
    <string name="strMsgRc">Study more!</string>
    <string name="strMsgRp">Please, try again next year!</string>
    <string name="msgErro">Type a number</string>
</resources>